syntax = "proto3";
package sei.epoch.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "epoch/v1/params.proto";
import "epoch/v1/epoch.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sei-protocol/sei-chain/x/epoch/types";

// Query defines the gRPC querier service.
service Query {
  // This endpoint is deprecated and will be removed in the future. Please use the `/sei/epoch/v1/epoch` instead.
  rpc deprecated_Epoch(QueryEpochRequest) returns (QueryEpochResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/epoch/epoch";
    option deprecated = true;
  }
  // Query the epoch in the chain
  rpc Epoch(QueryEpochRequest) returns (QueryEpochResponse) {
    option (google.api.http).get = "/sei/epoch/v1/epoch";
  }

  //  This endpoint is deprecated and will be removed in the future. Please use the `/sei/epoch/v1/params` instead.
  rpc deprecated_Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/epoch/params";
    option deprecated = true;
  }
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sei/epoch/v1/params";
  }
  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryEpochRequest {}

message QueryEpochResponse {
  Epoch epoch = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
